#59: Cached show details & used favorite cache in case of api outage